[project]
name = "qaguru-hw-16"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Efimow",email = "daniil.efimow@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "selene (==2.0.0rc9)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

